# oh-my-agent

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TECH_OVERVIEW.md  WORKSPACE_AGENTS.md  automation.yaml.example  compose.yaml  config.dev.yaml.example  config.yaml  config.yaml.example  pyproject.toml  setup.py
.gemini/skills/: weather
.github/workflows/: ci.yml
dashboard-web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
dashboard-web/src/: global.css  main.tsx
dashboard-web/src/app/: __root.tsx  index.tsx
dashboard-web/src/hooks/: use-session-history.ts  use-session-trace.ts  use-sessions.ts
dashboard-web/src/lib/: api.ts  utils.ts
data/: memory.db  memory.db-shm  memory.db-wal
docker/: entrypoint.sh
docs/: README.md  development.md  future_planning_discussion.md  router_smoke.md  scheduler-due-loop-plan.md  todo.md  v0.5_runtime_plan.md  v0.8-impl-sessions.md
docs/CN/: README.md  architecture.md  config-reference.md  dev-environment.md  development.md  monitoring.md  operator-guide.md  release-process.md  task-model.md  todo.md  troubleshooting.md  upgrade-guide.md  v0.5_runtime_plan.md  v1.0-plan.md
docs/EN/: README.md  architecture.md  config-reference.md  dev-environment.md  development.md  monitoring.md  operator-guide.md  release-process.md  task-model.md  todo.md  troubleshooting.md  upgrade-guide.md  v0.5_runtime_plan.md  v1.0-plan.md
docs/archive/: CN_v0.5_runtime_plan.md  future_planning_discussion.md  next_up.md
scripts/: clear-slash-commands.sh  docker-build.sh  docker-common.sh  docker-logs.sh  docker-run.sh  docker-start.sh  docker-status.sh  docker-stop.sh  migrate_memory_to_judge.py  run_harness.py
skills/adapt-community-skill/: SKILL.md
skills/adapt-community-skill/agents/: openai.yaml
skills/adapt-community-skill/references/: adaptation-checklist.md
skills/adapt-community-skill/scripts/: scan_skill.py
skills/bibigpt-v1-adapter/: SKILL.md
skills/bibigpt-v1-adapter/agents/: openai.yaml
skills/bibigpt-v1-adapter/references/: output-modes.md
skills/bilibili-video-summarizer/: SKILL.md
skills/bilibili-video-summarizer/agents/: openai.yaml
skills/bilibili-video-summarizer/references/: evidence-sources.md
skills/bilibili-video-summarizer/scripts/: normalize_bilibili_url.py
skills/bilibili-video-summary/: SKILL.md
skills/bilibili-video-summary/agents/: openai.yaml
skills/bilibili-video-summary/scripts/: extract_bilibili.py
skills/deals-scanner/: SKILL.md
skills/deals-scanner/agents/: openai.yaml
skills/jensen-huang-speech-research/: SKILL.md
skills/market-briefing/: SKILL.md
skills/market-briefing-ai/: SKILL.md
skills/market-briefing-finance/: SKILL.md
skills/market-briefing-politics/: SKILL.md
skills/market-briefing-weekly/: SKILL.md
skills/market-intel-report/: SKILL.md
skills/paper-digest/: SKILL.md
skills/scheduler/: SKILL.md
skills/seattle-metro-housing-watch/: SKILL.md
skills/skill-creator/: SKILL.md
skills/top-5-daily-news/: SKILL.md
skills/transcribe-media/: SKILL.md
skills/video-summarize/: SKILL.md
skills/weather/: SKILL.md
skills/youtube-podcast-digest/: SKILL.md
skills/youtube-video-summary/: SKILL.md
src/oh_my_agent/: boot.py  bot.py  config.py  config_validator.py  logging_setup.py  main.py  paths.py
tests/: test_adaptive_store.py  test_agent_registry.py  test_ai_people_pool.py  test_ask_service.py  test_auth_providers_bilibili.py  test_auth_service.py  test_automation_dump_channel.py  test_automation_posts.py  test_automation_service.py  test_automation_state.py  test_automation_state_refresh.py  test_boot.py  test_chunker.py  test_claude_agent.py  test_clear_commands.py  test_cli_error.py  test_cli_error_classification.py  test_cli_history.py  test_cli_resume_streaming.py  test_cli_stream.py  test_codex_agent.py  test_codex_session_resume.py  test_compressor.py  test_concurrent_isolation.py  test_config.py  test_config_validator.py  test_control_prompt.py  test_control_protocol.py  test_dashboard_api_v1.py  test_dashboard_app.py  test_dashboard_cli.py  test_dashboard_data.py  test_dashboard_data_concurrent.py  test_dashboard_data_sessions.py  test_date_based_store.py  test_deals_scanner_deal_store.py  test_diary_reflector.py  test_discord_channel.py  test_discord_render.py  test_doctor_service.py  (+58 more)
tests/harness/: runner.py  scripted_channel.py  stubs.py  test_scenarios.py
(+155 files in other folders)
