[project]
name = "oh-my-agent"
version = "0.4.0"
description = "Multi-platform bot backed by CLI-based AI agents (Claude, Gemini, Codex)"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Hanzhi Yang", email = "tcoherence@gmail.com"},
]
keywords = ["discord", "agents", "automation", "cli", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "discord.py>=2.4,<3",
    "python-dotenv>=1.0,<2",
    "PyYAML>=6.0,<7",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/TCoherence/oh-my-agent"
Repository = "https://github.com/TCoherence/oh-my-agent"
Issues = "https://github.com/TCoherence/oh-my-agent/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.40", "openai>=1.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
oh-my-agent = "oh_my_agent.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
