[project]
name = "oh-my-agent"
description = "Multi-platform bot backed by CLI-based AI agents (Claude, Gemini, Codex)"
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Hanzhi Yang", email = "tcoherence@gmail.com"},
]
keywords = ["discord", "agents", "automation", "cli", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
    "discord.py>=2.4,<3",
    "python-dotenv>=1.0,<2",
    "PyYAML>=6.0,<7",
    "aiosqlite>=0.20",
    "qrcode[pil]>=7.4,<9",
    "pydantic>=2,<3",
]

[project.urls]
Homepage = "https://github.com/TCoherence/oh-my-agent"
Repository = "https://github.com/TCoherence/oh-my-agent"
Issues = "https://github.com/TCoherence/oh-my-agent/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
dashboard = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "jinja2>=3.1,<4",
]
all = [
    "anthropic>=0.40",
    "openai>=1.0",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "jinja2>=3.1,<4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.13",
    "mypy>=1.13",
    "types-PyYAML",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "jinja2>=3.1,<4",
]

[project.scripts]
oh-my-agent = "oh_my_agent.main:main"
oma-dashboard = "oh_my_agent.dashboard.cli:main"

[tool.setuptools.dynamic]
version = {attr = "oh_my_agent._version.__version__"}

[tool.setuptools.package-data]
# Ship Jinja2 templates with the dashboard package so non-editable
# installs (wheel) can find them via importlib.resources / PackageLoader.
"oh_my_agent.dashboard" = ["templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["skills", ".claude"]

[tool.ruff.lint]
# Defaults (E4/E7/E9/F) + I (isort) for import sorting.
# Intentionally minimal — widen later once baseline is clean.
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Intentionally lax baseline — widen later once clean. Goals today: catch
# undefined names, obviously-wrong return types, None-attr access.
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
